--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "react-chat-widget",
+  "name": "react-chat-widget-angga",
   "version": "2.1.2",
   "description": "Chat web widget for React apps",
   "main": "lib/index.js",
-  "repository": "git@github.com:Wolox/react-chat-widget.git",
-  "author": "Martín Callegari <martin.callegari@wolox.com.ar>",
+  "repository": "https://github.com/purwanaabdip/react-chat-widget.git",
+  "author": "PAP",
   "license": "MIT",
   "scripts": {
     "build": "webpack",
