--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "author": "PAP",
   "license": "MIT",
   "scripts": {
-    "build": "webpack",
+    "build": "cross-env NODE_ENV=\"production\" webpack -p --progress",
     "test": "jest --coverage",
     "prepublish": "npm run test && npm run build"
   },
@@ -27,44 +27,51 @@
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
-    "babel-eslint": "^7.2.2",
-    "babel-jest": "^19.0.0",
+    "babel-eslint": "^8.2.2",
+    "babel-jest": "^22.4.1",
     "babel-loader": "^7.1.1",
-    "babel-plugin-module-resolver": "^2.7.1",
+    "babel-minify-webpack-plugin": "0.3.0",
+    "babel-plugin-module-resolver": "^3.1.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-preset-es2015": "^6.24.1",
+    "babel-polyfill": "6.26.0",
+    "babel-preset-env": "1.6.1",
     "babel-preset-react": "^6.24.1",
+    "cross-env": "5.1.3",
     "css-loader": "^0.28.4",
-    "enzyme": "^2.9.1",
-    "eslint": "^3.19.0",
-    "eslint-config-airbnb": "^14.1.0",
-    "eslint-config-prettier": "^1.6.0",
-    "eslint-import-resolver-babel-module": "^3.0.0",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "1.1.1",
+    "eslint": "^4.18.1",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-config-prettier": "^2.9.0",
+    "eslint-import-resolver-babel-module": "^4.0.0",
     "eslint-plugin-flowtype": "^2.30.4",
     "eslint-plugin-import": "^2.7.0",
-    "eslint-plugin-jsx-a11y": "^4.0.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-prettier": "^2.0.1",
-    "eslint-plugin-react": "^6.10.3",
+    "eslint-plugin-react": "^7.7.0",
     "extract-text-webpack-plugin": "^3.0.0",
-    "file-loader": "^0.11.2",
-    "husky": "^0.13.3",
-    "jest": "^20.0.4",
+    "file-loader": "^1.1.9",
+    "husky": "^0.14.3",
+    "jest": "^22.4.2",
+    "jsdom": "11.6.2",
+    "jsdom-global": "3.0.2",
     "node-sass": "^4.5.3",
     "prettier": "^1.1.0",
-    "prettier-eslint": "^5.1.0",
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1",
-    "react-test-renderer": "^15.6.1",
+    "prettier-eslint": "^8.8.1",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
+    "react-test-renderer": "^16.2.0",
     "sass-loader": "^6.0.6",
-    "style-loader": "^0.18.2",
-    "url-loader": "^0.5.9",
+    "style-loader": "^0.20.2",
+    "url-loader": "^0.6.2",
     "webpack": "^3.4.1"
   },
   "peerDependencies": {
-    "react": "^15.6.1"
+    "react": "^16.2.0"
   },
   "jest": {
-    "verbose": true,
+    "setupTestFrameworkScriptFile": "<rootDir>/mocks/setup.js",
+    "verbose": false,
     "moduleNameMapper": {
       "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/mocks/fileMock.js",
       "\\.(css|scss)$": "<rootDir>/mocks/styleMock.js"
